--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-123
+ <style>
+ #preloader-2 {
+	position:relative;
+}
+#preloader-2 span {
+	position:absolute;
+	width:30px;
+	height:30px;
+	margin: auto; 
+	background: #fff;
+	border-radius:999px;
+}
+#preloader-2 span:nth-child(1) {
+	animation: cross-1 5.5s infinite linear;
+}
+#preloader-2 span:nth-child(2) {
+	animation: cross-2 5.5s infinite linear;
+}
+@keyframes cross-1 {
+	0% {transform: translateX(0px); opacity: 1;}
+	50% {transform: translateX(880px); opacity: 0.5;}
+	100% {transform: translateX(0px); opacity: 1;}
+}
+@keyframes cross-2 {
+	0% {transform: translateX(80px); opacity: 1;}
+	50% {transform: translateX(0px); opacity: 0.5;}
+	100% {transform: translateX(80px); opacity: 1;}
+}
+    </style>
+<body style="background-color: #4ad3b4;">
+	<div id="preloader-2">
+		<span></span>
+		<span></span>
+	</div>
+</body>
+<script id="js" src="./j.js"></script>
